--- a/AndroidStudioProjects/WithMyBag/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/WithMyBag/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="20dp">
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -114,7 +117,7 @@
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:layout_weight="1"
             android:gravity="center|center_horizontal|center_vertical"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/BtnConnexion"
@@ -131,24 +134,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center|center_horizontal|center_vertical"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:gravity="center|center_horizontal|center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/txtViewWelcomeTxt"
-                android:layout_width="0dp"
-                android:layout_height="116dp"
-                android:layout_margin="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1" />
+            android:gravity="center|center_horizontal|center_vertical">
 
             <ImageView
                 android:id="@+id/imgSmiley"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="110dp"
+                android:layout_height="127dp"
+                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
@@ -156,6 +150,44 @@
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/accueil" />
+
+            <TextView
+                android:id="@+id/txtViewWelcomeTxt"
+                android:layout_width="96dp"
+                android:layout_height="101dp"
+                android:layout_margin="50dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:foregroundGravity="center_vertical|center|center_horizontal"
+                android:gravity="center|center_horizontal|center_vertical" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txtClientName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/name" />
+
+            <TextView
+                android:id="@+id/txtClientPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/phone" />
+
+            <TextView
+                android:id="@+id/txtClientEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/email" />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
